Starts working with the components